# python_project_CRUD

./: .gitignore  Makefile  README.md  example.py  old.py  pyproject.toml  setup.cfg  users_db.json  webserver.py  webserver_json_file.py  webserver_json_file_DB.py  webserver_session.py
templates/: index.html
templates/users/: edit.html  form.html  index.html  new.html  show.html
webserver/: __init__.py  app.py
webserver/templates/: index.html
webserver/templates/users/: edit.html
